prevent the volume number from covering the first item in the volume on the hrlr archive page

--- a/sass/_archives.scss
+++ b/sass/_archives.scss
@@ -74,6 +74,8 @@
       border-top: 1px solid $color-text;
       position: relative;
       padding: 15px 25px 10px 25px;
+      // prevent the issue number from covering the first item in the volume
+      z-index: -1;
     }
 
     .hrlr-post-volume-number {
